FIXING DROPDOWN BUG ON MOBILE

--- a/dev/smacss/modules/_menu.scss
+++ b/dev/smacss/modules/_menu.scss
@@ -44,7 +44,6 @@
   // .menu-listItem
   &-listItem {
     width: 100%;
-    height: 55px;
     border-left: 4px solid $pink;
     line-height: 55px;
     text-align: center;
@@ -64,6 +63,7 @@
       height: 100%;
     }
     @include breakpoint(min,1024px) {
+      height: 55px;
       display: inline-block;
       width: auto;
       margin-left: -3px;
@@ -81,11 +81,13 @@
       }
     }
     // VARIATIONS
-    // .menu-listItem .has-drop
     &.has-drop {
+      position: relative;
 
-      // .menu-listItem.has-drop:hover
-      &:hover {
+      // ON HOVER OR WITH A 'is-active' CLASS...
+      &:hover,
+      &.is-active {
+
         .dropdown {
           visibility: visible;
           opacity: 1;
@@ -93,6 +95,14 @@
         }
       }
 
+      &.is-active {
+
+        .dropdown {
+          height: auto;
+          display: block;
+
+        }
+      }
 
     }
     // .menu-listItem PSEUDO CLASSES
